# jkbots

./: README.md  selfbot.py
hydra/: main.py  replit_zip_error_log.txt
jkprotect/: 1.bat  config.json  main.py  requirements.txt  sqlite3_manipul.py
jkprotect/cogs/: ac.py  help.py  mod.py
lagbot/: main.py  pyproject.toml  replit_zip_error_log.txt
mee6/: main.py  pyproject.toml  replit_zip_error_log.txt
offender/: main.py  pyproject.toml  replit_zip_error_log.txt
protector/: main.py  pyproject.toml  replit_zip_error_log.txt
skillprotect/: main.py  pyproject.toml  replit_zip_error_log.txt
skillprotect msc/: config.json  main.py  pyproject.toml  whitelisted.json
skillprotect msc/Tools/: logMessage.py  utils.py
skillprotect msc/cogs/: AntiNuke.py  Captcha Join.py  Errors.py  Events.py  Help command.py  Join Filter.py  Panicmode event.py  Rolemanagement.py  disable.py  general commands.py  join_role.py  onChannelCreate.py  onMessage.py  prefix.py  setup.py
